add new user cucumber test + docs
